Cleanup testlib